# vCloudApi

./: .gitignore  .travis.yml  LICENSE  README.adoc  README.md  stack.yaml  vcloudapi.cabal
src/: Option.hs  Utils.hs  vcloud.hs
src/VCloud/: Namespace.hs  PayloadMapper.hs  Prelude.hs
test/: test-simple.xml  test.xml  vcloudapi.xml
