-- Initial sandbox.cabal geit.  For further
-- documentation, see http://haskell.org/cabal/users-guide/

name:                vcloudapi
version:             0.1.1.0
license-file:        LICENSE
author:              Pierre Radermecker
maintainer:          pierrer@pi3r.be
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable vcloud
  default-language: Haskell2010
  hs-source-dirs:      src
  main-is:             vcloud.hs
  default-extensions:  OverloadedStrings, NoImplicitPrelude
  ghc-options:  -fno-warn-missing-signatures
  other-modules:       Option, Utils, VCloud.Namespace, VCloud.Prelude, VCloud.PayloadMapper
  build-depends:       base >=4.8 && <4.9
                     , base-prelude
                     , bytestring
                     , containers
                     , connection
                     , http-client
                     , http-client-tls
                     , lens
                     , optparse-applicative
                     , transformers
                     , text
                     , wreq
                     , xml-conduit
                     , xml-hamlet
                     , xml-html-conduit-lens
